force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Country market this account belongs to (AR=Argentina, BR=Brazil). Drives language and routing.</description>
    <inlineHelpText>AR or BR — primary country for the account.</inlineHelpText>
    <label>Country Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AR</fullName>
                <default>true</default>
                <label>AR</label>
            </value>
            <value>
                <fullName>BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>