force-app/main/default/objects/Account/fields/CPF__c.field-meta.xml
<CustomField>
    <fullName>CPF__c</fullName>
    <description>Brazilian national ID (CPF). External ID for BR customer matching. Format: XXX.XXX.XXX-XX.</description>
    <externalId>true</externalId>
    <inlineHelpText>Brazilian CPF (e.g., 987.654.321-00).</inlineHelpText>
    <label>CPF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>