force-app/main/default/objects/Account/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>Argentine national ID (DNI). External ID for AR customer matching. Format: XX.XXX.XXX.</description>
    <externalId>true</externalId>
    <inlineHelpText>Argentine DNI (e.g., 26.335.822).</inlineHelpText>
    <label>DNI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>