force-app/main/default/objects/Account/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>Preferred language for voice/chat interactions (es-AR Spanish or pt-BR Portuguese).</description>
    <inlineHelpText>Locale code for voice TTS and Agentforce responses.</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>es-AR</fullName>
                <default>true</default>
                <label>es-AR</label>
            </value>
            <value>
                <fullName>pt-BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>